detalles finales pulidos